--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack --production"
+    "build": "webpack --production",
+    "prettier": "prettier --write \"**/*.{js,css,json,md}\""
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -34,11 +35,25 @@
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "husky": ">=1",
+    "lint-staged": ">=8",
     "postcss-loader": "^3.0.0",
+    "prettier": "1.18.2",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,css,json,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
