--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.0.0-alpha.27",
     "dateformat": "^3.0.3",
+    "material-table": "^1.53.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "mobx-state-tree": "^3.14.0",
