--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mobx-state-tree": "^3.14.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-image-crop": "^8.4.0",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.1.2"
   },
